@@ -24,6 +24,10 @@ define( function( require ) {
   var pHString = require( 'string!PH_SCALE/pH' );
   var stringNoValue = '-';
 
+  // constants
+  var ENABLED_COLOR = 'rgb(135,19,70)';
+  var DISABLED_COLOR = 'rgb(178,178,178)';
+
   /**
    * @param {Property<Number>} pHProperty
    * @param {Property<Boolean>} enabledProperty optional
@@ -56,7 +60,7 @@ define( function( require ) {
     var backgroundWidth = Math.max( labelNode.width, valueRectangle.width ) + ( 2 * backgroundXMargin );
     var backgroundHeight = labelNode.height + valueRectangle.height + backgroundYSpacing + ( 2 * backgroundYMargin );
     var backgroundRectangle = new Rectangle( 0, 0, backgroundWidth, backgroundHeight, cornerRadius, cornerRadius,
-      { fill: PHScaleColors.CUSTOM_PH_METER } );
+      { fill: ENABLED_COLOR } );
 
     // rendering order
     thisNode.addChild( backgroundRectangle );
@@ -86,7 +90,7 @@ define( function( require ) {
 
     if ( enabledProperty ) {
       enabledProperty.link( function( enabled ) {
-        backgroundRectangle.fill = enabled ? PHScaleColors.CUSTOM_PH_METER : 'rgb(178,178,178)';
+        backgroundRectangle.fill = enabled ? ENABLED_COLOR : DISABLED_COLOR;
       } );
     }
   }
